# backet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-backet-bot.yml  release.yml
deploy/bot/: Dockerfile  activate-release.sh  bootstrap-llama-model.sh  docker-compose.yml  env.example  smoke-test.sh
docs/: private-discord-bot.md
docs/qa/: prague-rules-answer-cases.json
docs/wiki/: Adding-Rules-to-a-Vault.md  Home.md  Hosting-Backet-Bot.md  Installation.md
metadata/: compatibility.json
openspec/: config.yaml
openspec/changes/add-answer-quality-diagnostics/: design.md  tasks.md
openspec/changes/add-automated-rules-scope-assertions/: design.md
openspec/changes/add-cli-auto-update-preflight/: tasks.md
openspec/changes/add-discord-query-bot/: design.md
openspec/changes/add-explore-first-workflow-skills/: tasks.md
openspec/changes/add-guided-bot-setup-wizard/: design.md  tasks.md
openspec/changes/add-hybrid-retrieval-and-vault-memory/: tasks.md
openspec/changes/add-hybrid-rules-retrieval/: design.md  tasks.md
openspec/changes/add-rules-answer-qa-workbench/: design.md  proposal.md  tasks.md
openspec/changes/add-rules-archetype-qa/: proposal.md  tasks.md
openspec/changes/add-rules-entity-first-retrieval/: tasks.md
openspec/changes/add-rules-pdf-ingestion/: tasks.md
openspec/changes/add-rules-query-planner/: design.md  proposal.md  tasks.md
openspec/changes/add-rules-scenario-answerability/: design.md  proposal.md  tasks.md
openspec/changes/add-vault-index-ignore-file/: design.md
scripts/: install.sh  setup-llama-cpp-vulkan-windows.ps1  smoke-install.sh
skills/: manifest.json
skills/city-foundation/: SKILL.md
skills/workflow-authoring/: SKILL.md
src/backet/: __init__.py  answer_quality.py  blueprints.py  bot_access.py  bot_answers.py  bot_discord.py  bot_export.py  bot_guided.py  bot_output.py  bot_playground.py  bot_profiles.py  bot_qa.py  bot_runtime.py  bot_setup.py  bot_setup_output.py  bot_setup_wizard.py  bot_visibility_wizard.py  cli.py  cli_update.py  distribution.py  embeddings.py  errors.py  index_ignore.py  indexing.py  local_runtime.py  memory.py  models.py  output.py  paths.py  repository.py  retrieval.py  rules.py  rules_output.py  rules_query_planner.py  rules_scope.py  skills.py  system_dependencies.py  system_dependencies_output.py  vault.py
tests/: conftest.py  test_answer_quality.py  test_blueprints.py  test_bot_access.py  test_bot_answers.py  test_bot_deploy_assets.py  test_bot_diagnostics.py  test_bot_discord.py  test_bot_export.py  test_bot_profiles.py  test_bot_qa.py  test_bot_runtime.py  test_bot_security.py  test_bot_setup.py  test_cli_contract.py  test_cli_skills.py  test_cli_update.py  test_distribution.py  test_embeddings.py  test_indexing.py  test_local_runtime.py  test_memory.py  test_output.py  test_repository.py  test_retrieval.py  test_rules.py  test_rules_output.py  test_rules_query_planner.py  test_skills.py  test_system_dependencies.py  test_vault.py  test_workflow_assets.py
(+199 files in other folders)
