[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "backet"
version = "0.1.23"
description = "CLI and skill-pack manager for Obsidian-based Vampire: The Masquerade campaign vaults."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Jansvitkin" }
]
dependencies = [
  "packaging>=24.1",
  "platformdirs>=4.3.6",
  "PyMuPDF>=1.25.1",
  "PyYAML>=6.0.2",
  "rich>=13.9.4",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2.post1",
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
]
retrieval = [
  "sentence-transformers>=3.4.1",
]
bot = [
  "discord.py>=2.7.1,<3",
]

[project.scripts]
backet = "backet.cli:run"

[project.urls]
Homepage = "https://github.com/jsvitkin/backet"
Repository = "https://github.com/jsvitkin/backet"
Issues = "https://github.com/jsvitkin/backet/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/backet"]

[tool.hatch.build.targets.wheel.force-include]
"metadata/compatibility.json" = "backet/resources/compatibility.json"
".github/workflows/deploy-backet-bot.yml" = "backet/resources/bot_deploy/.github/workflows/deploy-backet-bot.yml"
"deploy/bot/Dockerfile" = "backet/resources/bot_deploy/deploy/bot/Dockerfile"
"deploy/bot/activate-release.sh" = "backet/resources/bot_deploy/deploy/bot/activate-release.sh"
"deploy/bot/bootstrap-llama-model.sh" = "backet/resources/bot_deploy/deploy/bot/bootstrap-llama-model.sh"
"deploy/bot/docker-compose.yml" = "backet/resources/bot_deploy/deploy/bot/docker-compose.yml"
"deploy/bot/env.example" = "backet/resources/bot_deploy/deploy/bot/env.example"
"deploy/bot/smoke-test.sh" = "backet/resources/bot_deploy/deploy/bot/smoke-test.sh"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
